# search-engine-reuters

./: pyproject.toml
search_egine/: app.py  base.py  boolean.py  copy.json  main.py  output.txt  processing.py  split_data.py  teste.csv  teste.json  teste.py  vet.py
tests/: test_search_egine.py
