[tool.poetry]
name = "search-egine"
version = "0.1.0"
description = ""
authors = ["ayslanleal <ayslanleal15@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
regex = "^2022.3.15"
openpyxl = "^3.0.9"
nltk = "^3.7"
windows-curses = "^2.3.0"
sklearn = "^0.0"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
